snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
d69ec924448180aab75214bfb8856d7d113981987612249b2f8737f0720858cd